[package]
edition = "2021"
name = "brinedb"
version = "0.0.0"

[workspace]
members = ["crates/entity", "crates/migration"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "tokio_rt",
] }
napi-derive = "2.12.2"
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "macros",
] }
brinedb-entity = { path = "crates/entity" }
brinedb-migration = { path = "crates/migration" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
