[package]
edition = "2021"
name = "brine-db"
version = "0.0.0"

[workspace]
members = ["crates/entity", "crates/migration"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.2", default-features = false, features = [
    "napi8",
    "tokio_rt",
] }
# https://github.com/sfackler/rust-openssl/issues/763#issuecomment-1150213102
# openssl = { version = "0.10.64", features = ["vendored"] }
# https://github.com/launchbadge/sqlx/issues/3189
# https://github.com/launchbadge/sqlx/pull/3190
time = "=0.3.36"
napi-derive = "2.16.2"
brinedb-entity = { path = "crates/entity" }
brinedb-migration = { path = "crates/migration" }

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
strip = "symbols"
