[package]
edition = "2021"
name = "brine-db"
version = "0.0.0"

[workspace]
members = ["crates/orm"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.4", default-features = false, features = [
    "napi8",
    "tokio_rt",
] }
# https://github.com/sfackler/rust-openssl/issues/763#issuecomment-1150213102
openssl-sys = { version = "0.9.103", features = ["vendored"] }
# https://github.com/launchbadge/sqlx/issues/3189
# https://github.com/launchbadge/sqlx/pull/3190
# time = "=0.3.34"
napi-derive = "2.16.1"
brinedb-orm = { path = "crates/orm" }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
