[package]
name = "brinedb"
version = "1.0.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19.0"
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "macros",
] }
tokio = { version = "1.37.0", features = ["rt"] }
brinedb-entity = { path = "../entity" }
brinedb-migration = { path = "../migration" }
async-once-cell = "0.5.3"

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-latest"] # As of 2024-04 this is napi 8 = Node 12+ - https://nodejs.org/api/n-api.html#node-api-version-matrix
